force-app/main/default/objects/Case__c/fields/Handle__c.field-meta.xml
<CustomField>
    <fullName>Handle__c</fullName>
    <label>ハンドル</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>右</fullName>
            </value>
            <value>
                <fullName>左</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>