force-app/main/default/objects/Case__c/fields/Handle_hs__c.field-meta.xml
<CustomField>
    <fullName>Handle_hs__c</fullName>
    <label>ハンドル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>右</fullName>
                <default>true</default>
                <label>右</label>
            </value>
            <value>
                <fullName>左</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>