force-app/main/default/objects/Case__c/fields/HasOptedOutOfSMS__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>SMS送信除外</label>
    <type>Checkbox</type>
</CustomField>