force-app/main/default/objects/Case__c/fields/Heroku__c.field-meta.xml
<CustomField>
    <fullName>Heroku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Herokuへ連携する</label>
    <type>Checkbox</type>
</CustomField>