force-app/main/default/objects/Case__c/fields/HoldCount__c.field-meta.xml
<CustomField>
    <fullName>HoldCount__c</fullName>
    <formula>IF(AND( NOT(ISBLANK(ContactDate__c)),ISBLANK( PurchaseDate__c ),
      OR(ISPICKVAL(Phase__c,&quot;受付&quot;),ISPICKVAL(Phase__c,&quot;保留&quot;),ISPICKVAL(Phase__c,&quot;廃車保留&quot;) )),1,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保留カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>