force-app/main/default/objects/Case__c/fields/ID18__c.field-meta.xml
<CustomField>
    <fullName>ID18__c</fullName>
    <description>sano</description>
    <formula>CASESAFEID(Id)</formula>
    <label>ID18ケタ</label>
    <type>Text</type>
</CustomField>