force-app/main/default/objects/Case__c/fields/Image_existence_hs__c.field-meta.xml
<CustomField>
    <fullName>Image_existence_hs__c</fullName>
    <label>出品画像有無　★★★</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>画像あり</fullName>
            </value>
            <value>
                <fullName>画像なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>