force-app/main/default/objects/Case__c/fields/InChargeOf_Pricing__c.field-meta.xml
<CustomField>
    <fullName>InChargeOf_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>使用不可_値付担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InChargeOf_Pricing_User</relationshipName>
    <type>Lookup</type>
</CustomField>