force-app/main/default/objects/Case__c/fields/InquiryDate_cmp__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate_cmp__c</fullName>
    <description>書類管理からの問い合わせで使用。作成：山本</description>
    <label>対応完了日</label>
    <type>Date</type>
</CustomField>