force-app/main/default/objects/Case__c/fields/InquiryDate_DocMgmt__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate_DocMgmt__c</fullName>
    <description>書類管理からコールへの問い合わせ時に使用。作成：山本</description>
    <label>問い合わせ日（書類管理）</label>
    <type>Date</type>
</CustomField>