force-app/main/default/objects/Case__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <inlineHelpText>yyyy/mm</inlineHelpText>
    <label>車検(yyyy/mm)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>