force-app/main/default/objects/Case__c/fields/Inspection_month_hs__c.field-meta.xml
<CustomField>
    <fullName>Inspection_month_hs__c</fullName>
    <label>車検月</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VehicleInspection__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>