force-app/main/default/objects/Case__c/fields/Inspection_year_hs__c.field-meta.xml
<CustomField>
    <fullName>Inspection_year_hs__c</fullName>
    <label>車検年</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VehicleInspection__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
                <label>2023年/令和5年</label>
            </value>
            <value>
                <fullName>2024</fullName>
                <label>2024年/令和6年</label>
            </value>
            <value>
                <fullName>2025</fullName>
                <label>2025年/令和7年</label>
            </value>
            <value>
                <fullName>2026</fullName>
                <label>2026年/令和8年</label>
            </value>
            <value>
                <fullName>2027</fullName>
                <label>2027年/令和9年</label>
            </value>
            <value>
                <fullName>2028</fullName>
                <label>2028年/令和10年</label>
            </value>
            <value>
                <fullName>2029</fullName>
                <label>2029年/令和11年</label>
            </value>
            <value>
                <fullName>2020</fullName>
                <isActive>false</isActive>
                <label>2020年/令和2年</label>
            </value>
            <value>
                <fullName>2021</fullName>
                <isActive>false</isActive>
                <label>2021年/令和3年</label>
            </value>
            <value>
                <fullName>2022</fullName>
                <isActive>false</isActive>
                <label>2022年/令和4年</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>