force-app/main/default/objects/Case__c/fields/InstructionMakingDate__c.field-meta.xml
<CustomField>
    <fullName>InstructionMakingDate__c</fullName>
    <label>指示書作成日</label>
    <type>Date</type>
</CustomField>