force-app/main/default/objects/Case__c/fields/insurance_comment__c.field-meta.xml
<CustomField>
    <fullName>insurance_comment__c</fullName>
    <description>磯兼</description>
    <label>保険用コメント</label>
    <type>TextArea</type>
</CustomField>