force-app/main/default/objects/Case__c/fields/insurance_consult_type__c.field-meta.xml
<CustomField>
    <fullName>insurance_consult_type__c</fullName>
    <description>磯兼</description>
    <label>保険相談種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>補償相談</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>