force-app/main/default/objects/Case__c/fields/insurance_next_action_date__c.field-meta.xml
<CustomField>
    <fullName>insurance_next_action_date__c</fullName>
    <description>磯兼</description>
    <label>保険次回アクション日</label>
    <type>Date</type>
</CustomField>