force-app/main/default/objects/Case__c/fields/IntentionConfirm_TEL__c.field-meta.xml
<CustomField>
    <fullName>IntentionConfirm_TEL__c</fullName>
    <description>山本　意思確認する際の連絡先を入力する</description>
    <label>意思確認者TEL</label>
    <type>Phone</type>
</CustomField>