force-app/main/default/objects/Case__c/fields/Introducer__c.field-meta.xml
<CustomField>
    <fullName>Introducer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>紹介者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPerson__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>紹介キャンペーン</relationshipLabel>
    <relationshipName>Introducer_Case</relationshipName>
    <type>Lookup</type>
</CustomField>