force-app/main/default/objects/Case__c/fields/Is_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Project__c</fullName>
    <description>山本</description>
    <label>プロジェクト対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コールS</fullName>
            </value>
            <value>
                <fullName>S＋（100万以上）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>