force-app/main/default/objects/Case__c/fields/IsTransfer__c.field-meta.xml
<CustomField>
    <fullName>IsTransfer__c</fullName>
    <formula>OR(
AND(
OR(Text( VehicleClassification__c )= &apos;はなまるオークション/他社AA（コール）&apos;,Text( VehicleClassification__c )=&apos;コールA/リユース&apos;,Text( VehicleClassification__c )=&apos;コールA/リユース（SMS不可）&apos;, Text( VehicleClassification__c )=&apos;コールA/他社AA&apos;, Text( VehicleClassification__c )=&apos;コールA/他社AA（SMS不可）&apos;, Text( VehicleClassification__c )=&apos;コールA/ソコカラ&apos;, Text( VehicleClassification__c )=&apos;コールA/ソコカラ（SMS不可）&apos;)
,
WaitingCallA__c
,
WaitingOpp__c
)
,
AND(
Text( VehicleClassification__c )=&apos;リユースオークション&apos;
,
WaitingOpp__c
)
,
AND(
Text( VehicleClassification__c )=&apos;直接商談&apos;
,
WaitingOpp__c
)
,
AND(
OR(Text( VehicleClassification__c )= &apos;直売&apos;,Text( VehicleClassification__c )=&apos;直売（SMS不可）&apos;)
,
WaitingOpp__c
)
)</formula>
    <label>連携対象</label>
    <type>Checkbox</type>
</CustomField>