force-app/main/default/objects/Case__c/fields/Last_business_negotiation_date__c.field-meta.xml
<CustomField>
    <fullName>Last_business_negotiation_date__c</fullName>
    <description>山本</description>
    <label>最終商談行動日</label>
    <type>DateTime</type>
</CustomField>