force-app/main/default/objects/Case__c/fields/LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdate__c</fullName>
    <formula>LastUpdateAccount__c&gt; LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LASTUPDATE</label>
    <type>Checkbox</type>
</CustomField>