force-app/main/default/objects/Case__c/fields/LastUpdateAccount__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateAccount__c</fullName>
    <formula>Account__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終更新日時【取引先】</label>
    <type>DateTime</type>
</CustomField>