force-app/main/default/objects/Case__c/fields/LastUpdateCallA__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateCallA__c</fullName>
    <formula>CallAOpportunity__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終更新日時【コールA商談】</label>
    <type>DateTime</type>
</CustomField>