force-app/main/default/objects/Case__c/fields/LastUpdateOpportunity__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateOpportunity__c</fullName>
    <formula>Oppotunity__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終更新日時【買取商談】</label>
    <type>DateTime</type>
</CustomField>