force-app/main/default/objects/Case__c/fields/LeftSide__c.field-meta.xml
<CustomField>
    <fullName>LeftSide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>左側面　★</label>
    <type>Checkbox</type>
</CustomField>