force-app/main/default/objects/Case__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>自賠責</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>