force-app/main/default/objects/Case__c/fields/Liability_hs__c.field-meta.xml
<CustomField>
    <fullName>Liability_hs__c</fullName>
    <label>自賠責</label>
    <length>100</length>
    <type>Text</type>
</CustomField>