force-app/main/default/objects/Case__c/fields/limit_rlue__c.field-meta.xml
<CustomField>
    <fullName>limit_rlue__c</fullName>
    <formula>Demolition_contractor__r.limit_rlue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リミットルール</label>
    <type>Text</type>
</CustomField>