force-app/main/default/objects/Case__c/fields/List_created_date__c.field-meta.xml
<CustomField>
    <fullName>List_created_date__c</fullName>
    <label>リスト作成日</label>
    <type>Date</type>
</CustomField>