force-app/main/default/objects/Case__c/fields/ListingScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ListingScheduledDate__c</fullName>
    <label>出品予定日</label>
    <type>Date</type>
</CustomField>