force-app/main/default/objects/Case__c/fields/LoadingSpecification__c.field-meta.xml
<CustomField>
    <fullName>LoadingSpecification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野作成(喜多依頼分)</description>
    <label>積載指定</label>
    <type>Checkbox</type>
</CustomField>