force-app/main/default/objects/Case__c/fields/LocationAddress_City_hs__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress_City_hs__c</fullName>
    <formula>IF ( SameAsAccountAddress_hs__c = true , Account__r.PersonContact.MailingCity , Account__r.PersonContact.OtherCity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管場所住所（市区郡）</label>
    <type>Text</type>
</CustomField>