force-app/main/default/objects/Case__c/fields/LocationAddress_hs__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress_hs__c</fullName>
    <description>個人取引先⇒
　取引先と同じがTRUEの場合は郵送先住所、そうでない場合はその他住所
個人取引先でない⇒
　請求先住所</description>
    <formula>IF( Account__r.IsPerson__c = true , 
 IF( SameAsAccountAddress_hs__c  = true , 
  Account__r.PersonContact.MailingState &amp; Account__r.PersonContact.MailingCity &amp; Account__r.PersonContact.MailingStreet , 
  Account__r.PersonContact.OtherState &amp; Account__r.PersonContact.OtherCity &amp; Account__r.PersonContact.OtherStreet 
 ) , 
 Account__r.BillingState &amp; Account__r.BillingCity &amp; Account__r.BillingStreet
)</formula>
    <label>保管場所住所　★★★</label>
    <type>Text</type>
</CustomField>