force-app/main/default/objects/Case__c/fields/LocationAddress_State_hs__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress_State_hs__c</fullName>
    <formula>IF ( SameAsAccountAddress_hs__c = true , Account__r.PersonContact.MailingState , Account__r.PersonContact.OtherState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管場所住所（都道府県）</label>
    <type>Text</type>
</CustomField>