force-app/main/default/objects/Case__c/fields/LocationAddress_Street_hs__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress_Street_hs__c</fullName>
    <formula>IF ( SameAsAccountAddress_hs__c = true , Account__r.PersonContact.MailingStreet , Account__r.PersonContact.OtherStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管場所住所（町名・番地）</label>
    <type>Text</type>
</CustomField>