force-app/main/default/objects/Case__c/fields/LOT__c.field-meta.xml
<CustomField>
    <fullName>LOT__c</fullName>
    <formula>IF(
    OR(
        TEXT( VehicleClassification__c ) = &quot;リユースオークション&quot;,
        TEXT( VehicleClassification__c ) = &quot;直接商談&quot;,
        TEXT( VehicleClassification__c ) = &quot;直売&quot;,
        TEXT( VehicleClassification__c ) = &quot;コールA/リユース&quot;,
        TEXT( VehicleClassification__c ) = &quot;コールA/リユース（SMS不可）&quot;,
        TEXT( VehicleClassification__c ) = &quot;コールA/他社AA&quot;,
        TEXT( VehicleClassification__c ) = &quot;コールA/他社AA（SMS不可）&quot;
    ),
    PurchaseReception_LOT__c,
    LotNo__c
)</formula>
    <label>LOT</label>
    <type>Text</type>
</CustomField>