force-app/main/default/objects/Case__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <label>ロット番号</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>