force-app/main/default/objects/Case__c/fields/MailAddress__c.field-meta.xml
<CustomField>
    <fullName>MailAddress__c</fullName>
    <label>Mail_メールアドレス</label>
    <type>Email</type>
</CustomField>