force-app/main/default/objects/Case__c/fields/MailBody__c.field-meta.xml
<CustomField>
    <fullName>MailBody__c</fullName>
    <label>Mail_本文</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>