force-app/main/default/objects/Case__c/fields/MailOrigin__c.field-meta.xml
<CustomField>
    <fullName>MailOrigin__c</fullName>
    <label>Mail_発生元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>