force-app/main/default/objects/Case__c/fields/MailSubject__c.field-meta.xml
<CustomField>
    <fullName>MailSubject__c</fullName>
    <label>Mail_件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>