force-app/main/default/objects/Case__c/fields/MailUserName__c.field-meta.xml
<CustomField>
    <fullName>MailUserName__c</fullName>
    <label>Mail_氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>