force-app/main/default/objects/Case__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Makers__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>CustomCaseUnderMaker</relationshipName>
    <type>Lookup</type>
</CustomField>