force-app/main/default/objects/Case__c/fields/ManagerContactDate__c.field-meta.xml
<CustomField>
    <fullName>ManagerContactDate__c</fullName>
    <label>支店長連絡日</label>
    <type>Date</type>
</CustomField>