force-app/main/default/objects/Case__c/fields/marke_code2__c.field-meta.xml
<CustomField>
    <fullName>marke_code2__c</fullName>
    <description>Webから査定依頼が入ってきた際にソコカラ独自のマーケティングコードが入る。
関連する媒体すべてのマーケコードが入る。</description>
    <label>マーケコード2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>