force-app/main/default/objects/Case__c/fields/marke_code__c.field-meta.xml
<CustomField>
    <fullName>marke_code__c</fullName>
    <description>Webから査定依頼が入ってきた際にソコカラ独自のマーケティングコード（6桁の英語）が入る。山本</description>
    <label>マーケコード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>