force-app/main/default/objects/Case__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>媒体　★</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>テレビ</fullName>
            </value>
            <value>
                <fullName>ラジオ</fullName>
            </value>
            <value>
                <fullName>マイカースカウト</fullName>
            </value>
            <value>
                <fullName>新聞</fullName>
            </value>
            <value>
                <fullName>エネオス</fullName>
            </value>
            <value>
                <fullName>セレモア</fullName>
            </value>
            <value>
                <fullName>紹介</fullName>
            </value>
            <value>
                <fullName>JAF紹介</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>セルトレ一括査定</fullName>
            </value>
            <value>
                <fullName>セルトレ事故車</fullName>
            </value>
            <value>
                <fullName>UcarPAC</fullName>
            </value>
            <value>
                <fullName>ASネット</fullName>
            </value>
            <value>
                <fullName>カービュー</fullName>
            </value>
            <value>
                <fullName>ナビクル</fullName>
            </value>
            <value>
                <fullName>AFB</fullName>
            </value>
            <value>
                <fullName>A8アフィリエイト</fullName>
            </value>
            <value>
                <fullName>A8ポイント</fullName>
            </value>
            <value>
                <fullName>セレス</fullName>
            </value>
            <value>
                <fullName>リロクラブ</fullName>
            </value>
            <value>
                <fullName>ロイヤリティマーケティング</fullName>
            </value>
            <value>
                <fullName>ベネフィット・ワン</fullName>
            </value>
            <value>
                <fullName>レントラックス</fullName>
            </value>
            <value>
                <fullName>車選び.com</fullName>
            </value>
            <value>
                <fullName>買取ジャーナル</fullName>
            </value>
            <value>
                <fullName>HP/シミュレーター（広告）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>