force-app/main/default/objects/Case__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <formula>Demolition_contractor__r.memo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メモ</label>
    <type>Text</type>
</CustomField>