force-app/main/default/objects/Case__c/fields/Mileage_hs__c.field-meta.xml
<CustomField>
    <fullName>Mileage_hs__c</fullName>
    <label>走行距離　★</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>