force-app/main/default/objects/Case__c/fields/MileageUnit_hs__c.field-meta.xml
<CustomField>
    <fullName>MileageUnit_hs__c</fullName>
    <label>走行距離単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>km</fullName>
                <default>true</default>
                <label>km</label>
            </value>
            <value>
                <fullName>mile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>