force-app/main/default/objects/Case__c/fields/MileageUnknown__c.field-meta.xml
<CustomField>
    <fullName>MileageUnknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>走行距離不明</label>
    <type>Checkbox</type>
</CustomField>