force-app/main/default/objects/Case__c/fields/ModelDesignation__c.field-meta.xml
<CustomField>
    <fullName>ModelDesignation__c</fullName>
    <label>型式指定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>