force-app/main/default/objects/Case__c/fields/Mst_Type__c.field-meta.xml
<CustomField>
    <fullName>Mst_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型式</label>
    <referenceTo>Mst_Types__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>Case_Model</relationshipName>
    <type>Lookup</type>
</CustomField>