force-app/main/default/objects/Case__c/fields/MVR_DocumentsArrived__c.field-meta.xml
<CustomField>
    <fullName>MVR_DocumentsArrived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>提携業者回収書類到着済み</label>
    <type>Checkbox</type>
</CustomField>