force-app/main/default/objects/Case__c/fields/navikuru_apply_num__c.field-meta.xml
<CustomField>
    <fullName>navikuru_apply_num__c</fullName>
    <label>ナビクル_お申込番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>