force-app/main/default/objects/Case__c/fields/nearest_yard__c.field-meta.xml
<CustomField>
    <fullName>nearest_yard__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>引取先の最寄りヤード</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>nearest_yard</valueSetName>
    </valueSet>
</CustomField>